frontend/test/should_fail/cast_enum_types.grg
using cast_model;

rule r {
	modify {
	---
		eval {
			def var unrelENU:UnrelENU = (UnrelENU)ENU::a;
		}
	}
}
